[gd_scene load_steps=6 format=3 uid="uid://bvm1i1o5bdhgb"]

[ext_resource type="Script" uid="uid://dewc2upm7xobg" path="res://scenes/start.gd" id="1_0auqf"]
[ext_resource type="PackedScene" uid="uid://bdqjg1ugjmcqn" path="res://ui/menus/main_menu.tscn" id="2_y16t7"]
[ext_resource type="PackedScene" uid="uid://7tkqqg5c8h18" path="res://ui/menus/save_menu.tscn" id="3_4ge6i"]
[ext_resource type="PackedScene" uid="uid://cx2fp4d2uwxha" path="res://ui/menus/settings_menu.tscn" id="4_8itgj"]
[ext_resource type="PackedScene" uid="uid://cbw3rs4182gtj" path="res://ui/menus/credits_menu.tscn" id="5_tn317"]

[node name="Start" type="Node"]
script = ExtResource("1_0auqf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 101

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("2_y16t7")]
unique_name_in_owner = true

[node name="SaveMenu" parent="CanvasLayer" instance=ExtResource("3_4ge6i")]
unique_name_in_owner = true

[node name="SettingsMenu" parent="CanvasLayer" instance=ExtResource("4_8itgj")]
unique_name_in_owner = true

[node name="CreditsMenu" parent="CanvasLayer" instance=ExtResource("5_tn317")]
unique_name_in_owner = true
